--- a/CH3/p2.html
+++ b/CH3/p2.html
@@ -6,6 +6,15 @@
         <link href="stylepf.css" rel="stylesheet">
     </head>
     <body>
+        <div class="barre">
+        <div><a href="T:\Travail Aubry\HTML-CSS\CH3\portefolio.html"><h3 class="element">accueil🏡</h3></div>
+        <div><a href="T:\Travail Aubry\HTML-CSS\CH3\CV.html"><h3 class="element">Mon CV</h3></a></div>
+        <div><a href="T:\Travail Aubry\HTML-CSS\CH3\p2.html"><h3 class="element2">Mes compétences</h3></a></div>
+        <div><a href="T:\Travail Aubry\HTML-CSS\CH3\p3.html"><h3 class="element">Mes diplômes et certifications</h3></a></div>
+        <div><a href="T:\Travail Aubry\HTML-CSS\CH3\p4.html"><h3 class="element2">Mes loisirs</h3></a></div>
+        <div><a href="T:\Travail Aubry\HTML-CSS\CH3\p5.html"><h3 class="element">Mes stages</h3></a></div>
+        <div><a href="T:\Travail Aubry\HTML-CSS\CH3\pob.html"><h3 class="element2">Mes objectifs</h3></a></div>
+        </div>
         <p>
         <h2 class="perkcolor">Voici une liste de mes compétences</h2>
         </p>
