--- a/CH3/p3.html
+++ b/CH3/p3.html
@@ -6,6 +6,15 @@
         <link href="stylepf.css" rel="stylesheet">
     </head>
     <body>
+        <div class="barre">
+        <div><a href="T:\Travail Aubry\HTML-CSS\CH3\portefolio.html"><h3 class="element">accueil🏡</h3></div>
+        <div><a href="T:\Travail Aubry\HTML-CSS\CH3\CV.html"><h3 class="element">Mon CV</h3></a></div>
+        <div><a href="T:\Travail Aubry\HTML-CSS\CH3\p2.html"><h3 class="element2">Mes compétences</h3></a></div>
+        <div><a href="T:\Travail Aubry\HTML-CSS\CH3\p3.html"><h3 class="element">Mes diplômes et certifications</h3></a></div>
+        <div><a href="T:\Travail Aubry\HTML-CSS\CH3\p4.html"><h3 class="element2">Mes loisirs</h3></a></div>
+        <div><a href="T:\Travail Aubry\HTML-CSS\CH3\p5.html"><h3 class="element">Mes stages</h3></a></div>
+        <div><a href="T:\Travail Aubry\HTML-CSS\CH3\pob.html"><h3 class="element2">Mes objectifs</h3></a></div>
+        </div>
         <p>
         <h2 class="dip">Voici les diplômes que je possède :</h2>
         </p>
@@ -13,11 +22,11 @@
 </html>
 <p>
         <ul>
-            <p>Vous souhaitez voir l'image dans sa taille d'origine ? Cliquez dessus !<br>
+            <p>
             <aside class="droit"><a href="T:\Travail Aubry\HTML-CSS\CH3\BAC.png"><img src="T:\Travail Aubry\HTML-CSS\CH3\BAC1.png" alt="version miniature" title="Cliquez pour agrandir" ></a></aside>
             </p>
             <p>
-            <li>Baccalauréat Général avec les spécialités :</li>
+            <li><h4>Baccalauréat Général avec les spécialités :</h4></li>
             <ul>
                 <li>Numérique Science de l'Informatique</li>
                 <li>Physique chimie</li>
