--- a/CH3/portefolio.html
+++ b/CH3/portefolio.html
@@ -10,16 +10,17 @@
     </head>
     <body>
         <p>
-        <header class ="droit"><img src="T:\Travail Aubry\HTML-CSS\CH3\moi.png" alt="logo"/></header>
         <h1>Vuillame Genter Evan</h1> 
+        <header class ="droit"><img src="T:\Travail Aubry\HTML-CSS\CH3\moi.png" alt="logo"/></header>
         </p>
         <nav>
             <ul>
-                <li><a href="T:\Travail Aubry\HTML-CSS\CH3\p2.html"><h3>Mes compétences</h3></a></li>
-                <li><a href="T:\Travail Aubry\HTML-CSS\CH3\p3.html"><h3>Mes diplômes</h3></a></li>
-                <li><a href="T:\Travail Aubry\HTML-CSS\CH3\p4.html"><h3>Mes loisirs</h3></a></li>
-                <li><a href="T:\Travail Aubry\HTML-CSS\CH3\p5.html"><h3>Mes stages</h3></a></li>
-                <li><a href="T:\Travail Aubry\HTML-CSS\CH3\pob.html"><h3>Mes objectifs</h3></a></li>
+                <li><a href="T:\Travail Aubry\HTML-CSS\CH3\CV.html"><h3 class="element">Mon CV</h3></a></li>
+                <li><a href="T:\Travail Aubry\HTML-CSS\CH3\p2.html"><h3 class="element">Mes compétences</h3></a></li>
+                <li><a href="T:\Travail Aubry\HTML-CSS\CH3\p3.html"><h3 class="element">Mes diplômes et certifications</h3></a></li>
+                <li><a href="T:\Travail Aubry\HTML-CSS\CH3\p4.html"><h3 class="element">Mes loisirs</h3></a></li>
+                <li><a href="T:\Travail Aubry\HTML-CSS\CH3\p5.html"><h3 class="element">Mes stages</h3></a></li>
+                <li><a href="T:\Travail Aubry\HTML-CSS\CH3\pob.html"><h3 class="element">Mes objectifs</h3></a></li>
             </ul>
         </nav>
     </body>
