--- a/CH3/CV.html
+++ b/CH3/CV.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Mes stages</title>
+        <title>Mon CV</title>
         <link href="stylepf.css" rel="stylesheet">
     </head>
     <body>
@@ -16,13 +16,7 @@
         <div><a href="T:\Travail Aubry\HTML-CSS\CH3\pob.html"><h3 class="element2">Mes objectifs</h3></a></div>
         </div>
         <p>
-        <h2 class="perkcolor">Je n'ai fait qu'un seul stage pour le moment qui n'a aucun rapport avec ce que je fais maintenant :</h2>
-        </p>
-        <p>
-        <ul>
-            <li>Stage dans la ferme pédagogique ferme pédagogique Au gré du pré </li>
-            <img src="T:\Travail Aubry\HTML-CSS\CH3\stage.jpg" alt="logo"/>
-        </ul>
+        <img src="T:\Travail Aubry\HTML-CSS\CH3\Objectif.png" alt="CV"/>
         </p>
     </body>
 </html>
