--- a/CH3/p3.html
+++ b/CH3/p3.html
@@ -33,6 +33,6 @@
                 <li>avec l'option Maths Complémentaires</li>
             </ul>
             </p>
-            <li>Brevet d'Initiation à l'Aéronautique</li>
+            <li><h4>Brevet d'Initiation à l'Aéronautique</h4></li>
         </ul>
         </p>
